RESOLVED FIXED260617
[IFC] Minimum content width with "line-break: after-white-space" should not include trailing whitespace
https://bugs.webkit.org/show_bug.cgi?id=260617
Summary [IFC] Minimum content width with "line-break: after-white-space" should not i...
alan
Reported 2023-08-23 09:48:47 PDT
ssia
Attachments
Patch (4.97 KB, patch)
2023-08-23 09:54 PDT, alan
no flags
[fast-cq]Patch (19.41 KB, patch)
2023-08-23 12:16 PDT, alan
no flags
Patch (19.41 KB, patch)
2023-08-23 16:53 PDT, alan
ews-feeder: commit-queue-
alan
Comment 1 2023-08-23 09:54:09 PDT
alan
Comment 2 2023-08-23 12:16:14 PDT
Created attachment 467399 [details] [fast-cq]Patch
EWS
Comment 3 2023-08-23 16:06:57 PDT
Commit message contains (OOPS!) and no reviewer found, blocking PR #None
alan
Comment 4 2023-08-23 16:53:57 PDT
EWS
Comment 5 2023-08-23 18:33:13 PDT
Committed 267214@main (c9e3f2480826): <https://commits.webkit.org/267214@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 467402 [details].
Radar WebKit Bug Importer
Comment 6 2023-08-23 18:34:15 PDT
Note You need to log in before you can comment on or make changes to this bug.