[IFC] Minimum content width with "line-break: after-white-space" should not include trailing whitespace https://bugs.webkit.org/show_bug.cgi?id=260617

Reviewed by Antti Koivisto.

This matches legacy line layout behavior (except inside table cells with one (unbreakable) word, where legacy diverges from default behavior).

* LayoutTests/fast/text/preferred-widht-with-line-break-after-whitespace-expected.html: Added.
* LayoutTests/fast/text/preferred-widht-with-line-break-after-whitespace.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::placeInlineAndFloatContent):
* Source/WebCore/layout/formattingContexts/inline/TextOnlySimpleLineBuilder.cpp:
(WebCore::Layout::TextOnlySimpleLineBuilder::handleLineEnding):

Canonical link: https://commits.webkit.org/267214@main